<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    style="@style/activityStyle">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_github_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:layout_margin="@dimen/default_item_margin"
            android:hint="@string/please_enter_github_name" />

        <Button
            android:id="@+id/but_show_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_item_margin"
            android:background="@color/red_item_bg"
            android:padding="@dimen/default_item_padding"
            android:text="@string/show_repositories_list" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>